<resources>
    <string name="app_name">EasyShop</string>
    <string name="todo">TODO</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="price">Price :</string>
    <string name="connexion">Connexion</string>
    <string name="utilisateur">Utilisateur</string>
    <string name="mot_de_passe">Mot de passe</string>

    <string-array name="Categories">
        <item>Chaussures</item>
        <item>Vetements</item>
    </string-array>

</resources>
