<?xml version="1.0" encoding="utf-8"?>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent" android:layout_marginTop="10sp" android:layout_height="match_parent" android:orientation="vertical" >

    <ImageView android:id="@+id/image"
        android:layout_width="100sp"
        android:layout_height="100sp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:src="@drawable/ic_launcher_background"
        android:contentDescription="@string/todo" />

    <TextView android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="15sp"
        android:textColor="@color/abc_search_url_text_pressed"
        android:textStyle="bold"
        android:layout_toEndOf="@+id/image"
        android:text="@string/title"
        tools:ignore="PrivateResource" />

    <TextView android:id="@+id/desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/title"
        android:layout_marginTop="15sp"
        android:layout_below="@+id/title"
        android:text="@string/description" />

    <TextView android:id="@+id/price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/desc"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="20sp"
        android:textStyle="bold"
        android:text="@string/price" />

</RelativeLayout>
